Ch 11 Hands On Exercise

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 	<head> 
-		<title>LASTNAME Chapter11HandsOnExercise</title> 
+		<title>Walters Chapter11HandsOnExercise</title> 
 		<meta charset="utf-8"> 
 		<style>
-		
+            #wrapper {margin: 1em;}
+            footer {text-align: center;}
 		</style>
 	</head> 
 <body> 
-
+    <div id="wrapper">
+    <h2>Helpful Facts</h2>
+    <ol>
+        <li>The basis of copyright protection in the U.S. is the Copyright Act of 1976. It grants authors and artists the exclusive rights to reproduce, distribute, and display their works.(3)</li>
+        <li>As a general rule, it is wise to operate under the assumption that all works are protected by either copyright or trademark law unless conclusive information indicates otherwise.(1)</li>
+        <li>In the United States, federal copyrights begin automatically when a protected work becomes fixed in a tangible form, such as a book or a picture. This right also applies to works saved on computer disks and hard drives as well as on film or tape.(2)</li>
+        <li>You enjoy copyright protection immediately at the time of creation but registration with the U.S. Copyright Office allows you to have a civil remedy if someone steals your work.(3)</li>
+        <li>Also, copyrights are subject to fair use limitations. These limitations allow for some use of others' works even without prior approval. For example, uses that advance public interests, such as education or scholarship, tend to be deemed as “fair use,” especially if only small portions of the original work were copied or if appropriate attribution has been given to the original author or artist.(2)</li>
+    </ol>
+    <h3>Sources</h3>
+    <ol>
+        <li><a href="https://fairuse.stanford.edu/overview/website-permissions/websites/">Stanford University</a></li>
+        <li><a href="https://www.lawfirms.com/resources/technology-law/technology-and-intellectual-property/copyright-internet.htm">lawfrims.com</a></li>
+        <li><a href="https://www.termsfeed.com/blog/website-copyright-law/">termsfeed.com</a></li>
+    </ol>
+    </div>
 </body> 
+    <footer>Derek Walters   s530045@nwmissouri.edu</footer>
 </html> 
